Fixed layering for second graph and changed Flex spacing; Will customize later

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -4,9 +4,9 @@
 
 .flexParent {
     display: flex;
-    /* flex-direction: row; */
-    /* max-width: 25rem; */
-    justify-content: space-around;
+    /* flex-direction: column; */
+    /* max-width: 50rem; */
+    /* justify-content: space-around; */
     align-items: center;
     padding: 5px;
     border: 3px solid indigo;
